gobmkida/c1/special_attack3
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/special_attack3/src/engine/reading.c:3830:6: error: use of undeclared identifier 'byte_9AA89F'
if ( byte_9AA89F[v10] ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/special_attack3/src/engine/reading.c:3849:6: error: use of undeclared identifier 'byte_9AA88C'
if ( byte_9AA88C[v10] ) 
     ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/special_attack3/src/obj/1/reading.o] Error 1
